--- a/src/app/pages/executuve/tabs-doctors/tabs-doctors.page.scss
+++ b/src/app/pages/executuve/tabs-doctors/tabs-doctors.page.scss
@@ -5,3 +5,10 @@
   .icon–big {
     font-size: 200%;
   }
+
+  .my-custom-modal-css .modal-wrapper {
+    //height: 20%;
+    //top: 80%;
+  
+  
+  }
