--- a/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
+++ b/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
@@ -182,7 +182,7 @@
           </ion-card-->    
           
           
-          <ion-card   >
+          <ion-card   mode="ios" >
             <ion-row>
               <ion-col size-xs="12" class="ion-text-center">
                 <h3 >Critical : 
