--- a/src/app/pages/executuve/components/doctordetail/doctordetail.component.html
+++ b/src/app/pages/executuve/components/doctordetail/doctordetail.component.html
@@ -1,7 +1,7 @@
-<ion-header mode="md" class="ion-no-border" *ngIf="!isDesktop">
+<ion-header mode="md" class="ion-no-border" >
 
 
-  <ion-toolbar color="mango">
+  <ion-toolbar color="mango" *ngIf="!isDesktop">
     <span class="padding-left-10" (click)="closeModal()" routerDirection="backward" color="chh-css-primary2">
       <ion-icon name="arrow-back-outline" class="my-icon vcenter"></ion-icon>
       <!--ion-icon 
@@ -48,7 +48,7 @@
 
   <ion-grid class="ion-no-padding">
     <ion-row>
-      <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
+      <ion-col size-md="12"  >
         <ng-container>
           <div *ngFor="let x of listOfPatients">
 
