--- a/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.scss
+++ b/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.scss
@@ -250,3 +250,10 @@ input[type="number"] {
 .highcharts-data-table tr:hover {
   background: #f1f7ff;
 }
+ion-content{
+  --background: transparent;
+}
+
+.icon–big {
+  font-size: 160%;
+}
