--- a/src/app/pages/executuve/components/cvdbreakdown/cvdbreakdown.component.scss
+++ b/src/app/pages/executuve/components/cvdbreakdown/cvdbreakdown.component.scss
@@ -257,3 +257,9 @@ ion-content{
 .icon–big {
   font-size: 160%;
 }
+
+.effect1{
+  -webkit-box-shadow: 0 10px 6px -6px #777;
+     -moz-box-shadow: 0 10px 6px -6px #777;
+          box-shadow: 0 10px 6px -6px #777;
+}
