--- a/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
+++ b/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
@@ -270,14 +270,15 @@
 
           <ion-card   mode="ios" >
             <ion-row>
-              <ion-col size-xs="12" class="ion-text-center">
+              <ion-col size-xs="12" class="ion-text-center" (click)="detail('Critical','','')">
                 <h3 >Critical : 
                   <b *ngIf="!criticalTV33">{{criticalT}}</b>
                   <ion-spinner name="crescent" *ngIf="criticalTV33"></ion-spinner>
                 </h3>
               </ion-col>
               <ion-col size-xs="6" >
-                  <ion-item id="ion-item-ac" lines="none"  routerLink='/' routerDirection="back">
+                  <ion-item id="ion-item-ac" lines="none"  routerLink='/' routerDirection="back" 
+                  (click)="detail('Critical','C','')">
                     <ion-avatar slot="start">
                       <chh-app-text-avatar [text]='tTC' [color]="chhgreen" [textColor]="chhtextcolor"></chh-app-text-avatar>
                     </ion-avatar>
@@ -290,13 +291,16 @@
                   </ion-item>
                  
                  <app-cvdbreakdown 
+                  [site]="cvdbreakdownC"
+                  [critNcrit]="cvdbreakdowncrit"
                   [cvd]="this.CCC"
                   [ncvd]="this.CCNC"></app-cvdbreakdown>
                 
 
               </ion-col>
               <ion-col size-xs="6" >
-                  <ion-item id="ion-item-dn" lines="none" routerLink='/' routerDirection="back">
+                  <ion-item id="ion-item-dn" lines="none" routerLink='/' routerDirection="back" 
+                  (click)="detail('Critical','M','')">
                     <ion-avatar slot="start">
                       <chh-app-text-avatar [text]='tTM' [color]="chhred" [textColor]="chhtextcolor"></chh-app-text-avatar>
                     </ion-avatar>
@@ -309,6 +313,8 @@
                     </ion-label>
                   </ion-item>
                   <app-cvdbreakdown 
+                  [site]="cvdbreakdownM"
+                  [critNcrit]="cvdbreakdowncrit"
                   [cvd]="this.MCC"
                   [ncvd]="this.MCNC"></app-cvdbreakdown>
               </ion-col>
@@ -319,7 +325,7 @@
         
                 <ion-item class="ion-no-padding ion-no-margin" ></ion-item>
                 <ion-row>
-                  <ion-col size-xs="12" class="ion-text-center">
+                  <ion-col size-xs="12" class="ion-text-center" (click)="detail('Non-Critical','','')">
                     <h3 >Non Critical : 
                       <b *ngIf="!criticalTV33">{{noncriticalT}}</b>
                       <ion-spinner name="crescent" *ngIf="criticalTV33"></ion-spinner>
@@ -338,6 +344,8 @@
                         </ion-label>
                       </ion-item>
                       <app-cvdbreakdown 
+                      [site]="cvdbreakdownC"
+                      [critNcrit]="cvdbreakdownNcrit"
                       [cvd]="this.CNCC"
                       [ncvd]="this.CNCNC"></app-cvdbreakdown>
                   </ion-col>
@@ -355,6 +363,8 @@
                         </ion-label>
                       </ion-item>
                       <app-cvdbreakdown 
+                      [site]="cvdbreakdownM"
+                      [critNcrit]="cvdbreakdownNcrit"
                       [cvd]="this.MNCC"
                       [ncvd]="this.MNCNC"></app-cvdbreakdown>
                   </ion-col>
@@ -362,7 +372,7 @@
                 </ion-row>
       
         
-                <ion-item class="ion-no-padding ion-no-margin" ></ion-item>
+                <ion-item class="ion-no-padding ion-no-margin" lines="none"></ion-item>
 
           </ion-card> 
           
