--- a/src/global.scss
+++ b/src/global.scss
@@ -174,6 +174,7 @@
 }
 .modal-wrapper{
   background: transparent !important;
+  --box-shadow: 0 28px 48px rgba(0, 0, 0, 0);
 }
 ion-popover{
    ion-backdrop{
