--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.scss
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.scss
@@ -22,3 +22,15 @@
   .paddingtop-10{
     padding-top: 10px;
   }
+
+  .footer {
+    width: 100%;
+    color: #fff;
+    font-weight: bold;
+    background: #275228;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+    position: fixed;
+    bottom: 0px;
+  }
